将工具注册表接入编排上下文，抽取重复逻辑代码