@@ -3,10 +3,11 @@ package io.github.halcyonsong.liteagent.core.tool.impl;
 import io.github.halcyonsong.liteagent.core.tool.norm.ToolRegistrar;
 import io.github.halcyonsong.liteagent.core.tool.norm.ToolRegistry;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
- * 工具注册器工厂。
+ * 工具注册表工厂。
  */
 public final class ToolRegistries {
 
@@ -20,7 +21,16 @@ public final class ToolRegistries {
     public static ToolRegistry inMemory(Object... toolObjects) {
         ToolRegistry registry = new InMemoryToolRegistry();
         ToolRegistrar registrar = new ReflectionToolRegistrar();
-        registrar.registerAll(List.of(toolObjects), registry);
+        if (toolObjects != null && toolObjects.length > 0) {
+            registrar.registerAll(Arrays.asList(toolObjects), registry);
+        }
+        return registry;
+    }
+
+    public static ToolRegistry inMemory(List<?> toolObjects) {
+        ToolRegistry registry = new InMemoryToolRegistry();
+        ToolRegistrar registrar = new ReflectionToolRegistrar();
+        registrar.registerAll(toolObjects, registry);
         return registry;
     }
 }
